fixed name variable

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -25,7 +25,7 @@
             <td><%= profile.sex %></td>
             <td><%= profile.city %></td>
             <td><a href="https://instagram.com/<%= profile.instagram %>"><%= profile.instagram %></a></td>
-            <td><%= profile.count_instagram %></td>
+            <td><%= profile.followers %></td>
           </tr>
         <% }); %>
       </tbody>
