--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,13 @@
 </head>
 <body>
   <div class="uk-grid uk-container-center">
+    <div class="uk-push-1-3">
+      <div class="sort">
+        <a href="#!" class="sort__online">online</a>
+        <a href="#!" class="sort__female">female</a>
+        <a href="#!" class="sort__male">male</a>
+      </div>
+    </div>
     <table class="uk-table table">
       <caption>Instagram Grabber by @bifot</caption>
       <tbody>
@@ -16,6 +23,7 @@
           <td>Name</td>
           <td>Sex</td>
           <td>City</td>
+          <td>Status</td>
           <td>Instagram</td>
           <td>Followers</td>
         </tr>
@@ -24,6 +32,7 @@
             <td><a href="https://vk.com/id<%= profile.id %>"><%= profile.name %></a></td>
             <td><%= profile.sex %></td>
             <td><%= profile.city %></td>
+            <td><%= profile.online %></td>
             <td><a href="https://instagram.com/<%= profile.instagram %>"><%= profile.instagram %></a></td>
             <td><%= profile.followers %></td>
           </tr>
@@ -31,5 +40,7 @@
       </tbody>
     </table>
   </div>
+
+  <script src="js/app.js"></script>
 </body>
 </html>
